<resources>
    <string name="app_name">SmartHome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client_id">21456792445-e5e2ctqefrjldohrl49i0cgkdkcas195.apps.googleusercontent.com</string>
    <string name="clock">clock</string>
    <string name="title_automatic">Tạo ngữ cảnh thông minh</string>
    <string name="lich_trinh">Lịch trình</string>
    <string name="example_lich_trinh">Ví dụ: Vào 7h mỗi buổi sáng...</string>
    <string name="next">next</string>
    <string name="change">Thay đổi trang thái\n</string>
    <string name="status_change">Khi trạng thái thay đổi</string>
    <string name="example_status_change">Ví dụ: Khi cửa được mở thì...</string>
    <string name="title_control">Đề xuất:</string>
    <string name="open_door">Bật đèn khi cửa mở</string>
    <string name="turn_on_all_light">Bật tất cả đèn</string>
    <string name="turn_off_all_light">Tắt tất cả đèn</string>
    <string name="turn_on_light_when_move">Bật đèn khi có chuyển động</string>
    <string name="den">"Đèn "</string>
    <string name="quat">"Quạt "</string>
    <string name="tivi">Tivi</string>
    <string name="cua">Cửa</string>
    <string name="device_icon">device_icon</string>
    <string name="device_name">Đèn trần</string>
    <string name="device_room">Phòng khách</string>
    <string name="room">"Phòng: "</string>
    <string name="type">"Loại thiết bị: "</string>
    <string name="serial_number">"Số seri thiết bị: "</string>
    <string name="serial_code">SAFETY CODE</string>
    <string name="context">Số seri thiết bị được in ở mặt sau của sản phẩm, vui lòng nhập đúng số seri để thêm thiết bị hoặc sử dụng chức năng quét mã QR để nhập tự động</string>
    <string name="add_device">Chọn thiết bị để thêm</string>
    <string name="todo">TODO</string>
    <string name="btn_add">Thêm thiết bị</string>
    <string name="btnDangKy">Đăng ký tài khoản</string>
    <string name="btnDangNhap">Đăng nhập bằng tài khoản hiện có</string>
    <string name="home">Nhà của tôi</string>
    <string name="living_room">Phòng khách</string>
    <string name="all_devices">Tất cả thiết bị</string>
    <string name="clouds">Mây</string>
    <string name="string_percent">20%</string>
    <string name="humidity">"Độ ẩm "</string>
    <string name="percent_humidity">"80% "</string>
    <string name="weather_description">Trời có mây, nắng nhẹ</string>
    <string name="temp">"20°C "</string>
    <string name="kitchen">Phòng bếp</string>
    <string name="bed_room">Phòng ngủ</string>
    <string name="weather_icon">Weather icon</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="google_button">Google</string>
    <string name="facebook_button">Facebook</string>
    <string name="microsoft_button">Microsoft</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="me">Profile</string>
    <string name="record">Record</string>
    <string name="listening">Nhấn giữ để ghi âm, thả để ngừng. . .</string>
    <string name="result">Bật đèn</string>
    <string name="try_again">Nhấn vào micro để thử lại</string>
    <string name="prompt_remember_me">Tôi đồng ý với CHÍNH SÁCH QUYỀN RIÊNG TƯ VÀ THOẢ THUẬN NGƯỜI DÙNG</string>
    <string name="prompt_or">Hoặc đăng ký bằng</string>
    <string name="register">Đăng ký</string>
    <string name="select_device">Chọn Thiết bị</string>
    <string name="select_room">Chọn phòng</string>
    <string name="set_schedule">LƯU</string>
    <string name="schedule_list">Danh sách thiết bị đã lên lịch</string>
    <string name="time_on">Hẹn giờ bật</string>
    <string name="time_off">Hẹn giờ tắt</string>
    <string name="turn_on_all_fan">Bật tât cả quạt</string>
    <string name="turn_off_fan">Tắt tât cả quạt</string>

    <string-array name="device_types">
        <item>Đèn trần</item>
        <item>Quạt trần</item>
        <item>Cửa chính</item>
        <item>Smart TV</item>
    </string-array>

    <string-array name="rooms">
        <item>Phòng khách</item>
        <item>Phòng bếp</item>
        <item>Phòng ngủ</item>
    </string-array>
</resources>