<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddDeviceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:menu="@menu/menu_add_device"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/add_device"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:fontFamily="serif"
            android:text="@string/context"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp">

        </TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:elevation="10dp"
            android:orientation="vertical"
            android:background="@drawable/circle"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="serif"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>

            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:elevation="10dp"
            android:orientation="vertical"
            android:background="@drawable/circle"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="serif"
                android:text="@string/room"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinnerRoom"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:elevation="10dp"
            android:orientation="vertical"
            android:background="@drawable/circle"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="serif"
                android:text="@string/serial_number"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/serial_code"
                    android:maxLength="8"
                    android:inputType="number"
                    android:id="@+id/etSerialNumber"
                    android:fontFamily="serif"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:autofillHints="phone"
                    >
                </EditText>

                <ImageView
                    android:id="@+id/btnScanQRCode"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/scan"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="scanQRCode"
                    >
                </ImageView>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnAddDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/btn_add"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:onClick="addDevice"
            android:backgroundTint="#00BFFF"
            android:elevation="10dp"
            >
        </Button>


    </LinearLayout>

</FrameLayout>