<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FirstAppFragment">


    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:text="@string/btnDangNhap"
        android:fontFamily="serif"
        android:textSize="17sp"
        android:textStyle="bold"
        android:backgroundTint="#00BFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <Button
        android:id="@+id/btnDangKy"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:text="@string/btnDangKy"
        android:textSize="17sp"
        android:backgroundTint="#D3D3D3"
        android:fontFamily="serif"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="450dp"
        android:layout_height="394dp"
        android:src="@drawable/smarthome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="74dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/home"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222"
        android:contentDescription="@string/app_name"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
